--- a/index.html
+++ b/index.html
@@ -215,8 +215,7 @@
                 <div class="row align-items-end align-items-xl-start">
                     <div class="col-lg-6">
                         <div class="banner-content" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="100">
-                            <h5 class="title">Welcome to Puzzles Living - Your Ultimate Student Accommodation near Christ University, Bangalore!
-                                .</h5>
+                            <h5 class="title">Welcome to Puzzles Living - Your Ultimate Student Accommodation</h5>
                             <span class="subtitle">Discover a home away from home at Puzzles Living, where comfort, convenience, and community converge to create the perfect student living experience. With over 10 properties tailored for both girls and boys, we offer an ideal sanctuary near Christ University.
                             </span>
                             <a href="contact.html" class="axil-btn btn-fill-primary btn-large">Get Started</a>
