--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
         .container3 {
             max-width: 600px;
             margin: auto;
-            background: rgb(236, 232, 232);
+            background: rgb(239, 238, 238);
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 50px;
+            align-items: center;
         }
         .feature {
             margin-bottom: 20px;
