--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 50px;
-            align-items: center;
+            
         }
         .feature {
             margin-bottom: 20px;
@@ -218,7 +218,7 @@
                     <div class="col-lg-6">
                         <div class="banner-content" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="100">
                             <h5 class="title">Welcome to Puzzles Living - Your Ultimate Student Accommodation</h5>
-                            <span class="subtitle">Discover a home away from home at Puzzles Living, where comfort, convenience, and community converge to create the perfect student living experience. With over 10 properties tailored for both girls and boys, we offer an ideal sanctuary near Christ University.
+                            <span class="subtitle">Discover a home away from home at Puzzles Living, where comfort, convenience, and community converge to create the perfect student living experience. 
                             </span>
                             <a href="contact.html" class="axil-btn btn-fill-primary btn-large">Get Started</a>
                         </div>
